--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -26,7 +26,7 @@
 <header>
     <nav class="navbar container">
       <div class="navbar__logo">
-          <a href="../public/pages/shop/shop.html" class="navbar__link-banner">
+          <a href="/" class="navbar__link-banner">
               <img src="/img/multimedia/branding/logo_light_horizontal.svg" alt="logo_FUNKOSHOP" class="navbar__img">
           </a>
       </div>
@@ -36,24 +36,24 @@
               <a href="/public/pages/shop/shop.html" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
               <ul class="submenu">
                   <li class="submenu__item">
-                      <a href="../pages/index.html" class="submenu__link">FUNKOS</a>
+                      <a href="shop?filter=funkos" class="submenu__link">FUNKOS</a>
                   </li>
                   <li class="submenu__item">
-                      <a href="#" class="submenu__link">LLAVEROS</a>
+                      <a href="shop?filter=llaveros" class="submenu__link">LLAVEROS</a>
                   </li>
                   <li class="submenu__item">
-                      <a href="#" class="submenu__link">REMERAS</a>
+                      <a href="shop?filter=remeras" class="submenu__link">REMERAS</a>
                   </li>
               </ul>
           </li>
           <li class="navbar__item">
-              <a href="/public/pages/shop/contacto.html" class="navbar__link">CONTACTO</a>
+              <a href="/contact" class="navbar__link">CONTACTO</a>
           </li>
           <li class="navbar__item">
-              <a href="/public/pages/admin/login.html" class="navbar__link">LOGIN</a>
+              <a href="/auth/login" class="navbar__link">LOGIN</a>
           </li>
           <li class="navbar__item">
-              <a href="/public/pages/shop/carrito.html" class="navbar__link">
+              <a href="/shop/cart" class="navbar__link">
                   <i class="fa-solid fa-cart-shopping"></i>
                   <span class="navbar__item-cart">0</span>
               </a>
