--- a/src/views/shop/carrito.ejs
+++ b/src/views/shop/carrito.ejs
@@ -1,51 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../estilos/Normalize.css"> <!-- falta esto -->
-    <link rel="stylesheet" href="../../estilos/styleCart.css">
-    <title>CARRITO</title>
-</head>
-<body>
-    <header class="header">
-        <nav class="navbar container">
-            <div class="navbar__logo">
-                <a href="../../inicio.html" class="navbar__link-banner">
-                    <img src="../../img/multimedia/branding/logo_light_horizontal.svg" alt="logo_FUNKOSHOP" class="navbar__img">
-                </a>
-            </div>
-        
-            <ul class="navbar__list">
-                <li class="navbar__item navbar__item--with-submenu">
-                    <a href="./shop.html" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
-                    <ul class="submenu">
-                        <li class="submenu__item">
-                            <a href="#" class="submenu__link">FUNKOS</a>
-                        </li>
-                        <li class="submenu__item">
-                            <a href="#" class="submenu__link">LLAVEROS</a>
-                        </li>
-                        <li class="submenu__item">
-                            <a href="#" class="submenu__link">REMERAS</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="navbar__item">
-                    <a href="contacto.html" class="navbar__link">CONTACTO</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="../admin/login.html" class="navbar__link">LOGIN</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="./carrito.html" class="navbar__link">
-                        <i class="fa-solid fa-cart-shopping"></i>
-                        <span class="navbar__item-cart">0</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+<%- include('../partials/header') %>
     <main class="main container">
         
         <section class="cart">
@@ -118,31 +71,7 @@
         </section>
     </main>
     
-    <footer class="footer">
-        <div class="footer__container container">
-            <nav class="footer__navbar navbar">
-                <ul class="footer__list navbar__list">
-                    <li class="footer__item">
-                        <a href="../shop/shop.html" class="footer__link navbar__link"> SHOP</a>
-                    </li>
-                    <li class="footer__item">
-                        <a href="../admin/login.html" class="footer__link navbar__link">INGRESAR</a>
-                    </li>
-                    <li class="footer__item">
-                        <a href="../shop/contacto.html" class="footer__link navbar__link">CONTACTO</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="footer__rights">
-                <p class="footer__text">All rights reserved 2023 - Funkoshop &copy;</p>
-                <p class="footer__text">CODO A CODO - Curso Java Script-Node JS</p>
-              <p class="footer__text"> Comision 23568 Grupo 7</p>
-            </div>
-            <div class="footer__logo ">
-                <img src="../../img/multimedia/branding/isotype.svg" alt="logo_FUNKOSHOP" class="footer__img">
-            </div>
-        </div>
-    </footer>
+   <%- include ('../partials/footer') %>
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
     <script src="../../js-fede/carritoFunctions.js"></script>
     <script src="../../js-fede/Carrito.js"></script>
