--- a/src/views/admin/edit.ejs
+++ b/src/views/admin/edit.ejs
@@ -1,37 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
- 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/estilos/Normalize.css"> <!-- falta esto -->
-    <link rel="stylesheet" href="../../estilos/editar-item.css">
-    <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
-    <title>Edit</title>
-</head>
- 
-<body>
-    <header class="header">
-        <nav class="navbar container">
-            <div class="navbar__logo">
-                <a href="../pages/index.html" class="navbar__link-banner">
-                    <img src="../../img/multimedia/branding/logo_light_horizontal.svg" alt="logo_FUNKOSHOP" class="navbar__img">    </a>
-            </div>
- 
-            <ul class="navbar__list">
-                <li class="navbar__item">
-                    <a href="/public/pages/shop/shop.html" class="navbar__link">VER TIENDA</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="../admin/adminListadoProductos.html" class="navbar__link">ADMIN</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/public/inicio.html" class="navbar__link">SALIR</a>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+<%- include('../partials/header') %>
     <main class="root">
         <div class="new-item">
             <h1>EDITAR ITEM</h1>
@@ -92,29 +59,7 @@
         </section>
     </main>
  
-    <footer class="footer">
-        <div class="footer__container container">
-            <nav class="footer__navbar navbar">
-                <ul class="footer__list navbar__list">
-                    <li class="footer__item">
-                        <a href="/public/pages/shop/shop.html" class="footer__link navbar__link"> SHOP</a>
-                    </li>
-                    <li class="footer__item">
-                        <a href="/public/pages/admin/login.html" class="footer__link navbar__link">INGRESAR</a>
-                    </li>
-                    <li class="footer__item">
-                        <a href="/public/pages/shop/contacto.html" class="footer__link navbar__link"">CONTACTO</a>
-                    </li>
-                </ul>
-            </nav>
-            <div class=" footer__rights">
-                            <p class="footer__text">All rights reserved 2023 - Funkoshop &copy;</p>
-        </div>
-        <div class="footer__logo ">
-            <img src="../../img/multimedia/branding/logo_light_horizontal.svg" alt="logo_FUNKOSHOP" class="footer__img">
-        </div>
-        </div>
-    </footer>
+   <%- include('../partials/footer') %>;
  
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
     <script src="../../js/edit-item.js"></script>
