--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -1,45 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-    crossorigin="anonymous"
-  />
-    <link rel="stylesheet" href="../../estilos/Normalize.css">
-    <link rel="stylesheet" href="../../estilos/login.css">
-    <!-- <link rel="stylesheet" href="../css/bootstrap.min.css"> -->
-
-    <title>LOGIN</title>
-</head>
-<body>
-       <!-- header -->
-       <header class="header">
-        <nav class="navbar container">
-            <div class="navbar__logo">
-                <a href="/public/inicio.html" class="navbar__link-banner">
-                    <img src="../../img/multimedia/branding/logo_light_horizontal.svg" alt="logo_FUNKOSHOP" class="navbar__img">
-                </a>
-            </div>
-        
-            <ul class="navbar__list">
-                <li class="navbar__item navbar__item--with-submenu">
-                    <a href="/public/pages/shop/shop.html" class="navbar__link navbar__link--icon">VER TIENDA</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="./adminListadoProductos.html" class="navbar__link">ADMIN</a>
-                </li>
-                <li class="navbar__item">
-                    <a href="/public/inicio.html" class="navbar__link">SALIR</a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+<%- include('../partials/header') %>
     <!-- formulario -->
     <main class="main">
 
@@ -94,18 +53,7 @@
         </div>
     </main>
     <!-- footer -->
-    <footer class="pie-pagina">
-        <div class="contacto">Contacto</div>
-        <div>
-            <ul>
-                <li>telefono:44589001</li>
-                <li>direccion:Av jujuy 309</li>
-                <li>correo:contacto@comicsstore.com</li>
-            </ul>
-        </div>
-        <div class="pago">
-            <h5>Medios de pago</h5>
-        </div>
+    <%- include ('../partials/footer') %>
         <!-- <script src="./js/bootstrap.bundle.min.js"></script> -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" -->
             <!-- integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqFjcJ6pajs/rfdfs3SO+kD4Ck5BdPtF+to8xMp9Mvc9E3I3WQ8wKUi3A0/GIi2vz9Z+GoiPkYs+gydKh3GpC/gZcI2Pf3Cj02qNW43wXxMf3oP81p3V7+8fvE+04vflMG22d6/lwZYhN42C9Xp28O17xOvT4A0XUt/Lk/g"
