--- a/src/views/inicio.ejs
+++ b/src/views/inicio.ejs
@@ -158,31 +158,7 @@
       </section>
     </main>
 
-    <footer class="footer">
-      <div class="footer__container container">
-          <nav class="footer__navbar navbar">
-              <ul class="footer__list navbar__list">
-                  <li class="footer__item">
-                      <a href="../public/pages/shop/shop.html" class="footer__link navbar__link"> SHOP</a>
-                  </li>
-                  <li class="footer__item">
-                      <a href="../public/pages/admin/login.html" class="footer__link navbar__link">INGRESAR</a>
-                  </li>
-                  <li class="footer__item">
-                      <a href="../public/pages/shop/contacto.html" class="footer__link navbar__link">CONTACTO</a>
-                  </li>
-              </ul>
-          </nav>
-          <div class="footer__rights">
-              <p class="footer__text">All rights reserved 2023 - Funkoshop &copy;</p>
-              <p class="footer__text">CODO A CODO - Curso Java Script-Node JS</p>
-              <p class="footer__text"> Comision 23568 Grupo 7</p>
-          </div>
-          <div class="footer__logo ">
-              <img src="/img/multimedia/branding/isotype.svg" alt="logo_FUNKOSHOP" class="footer__img">
-          </div>
-      </div>
-  </footer>
+   <%- include('./partials/footer') %>
     <!-- Este script es para iconnify, donde bajaremos los chevrones del header -->
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
