--- a/src/views/shop/shop.ejs
+++ b/src/views/shop/shop.ejs
@@ -55,19 +55,21 @@
     
             <section">
                 <ul class="pagination__list">
-                    <li><a href="#"><</a></li>
+                    <li><a href="#"></a></li>
                     <li class="active"><a href="#">1</a></li>
                     <li class="active"><a href="#">2</a></li>
                     <li><a href="#">...</a></li>
                     <li><a href="#">4</a></li>
                     <li><a href="#">5</a></li>
-                    <li><a href="#">></a></li>
+                    <li><a href="#"></a></li>
                 </ul>
             </section>
 
         </main> <!-- Fin Main -->
     </div>
+
 <%- include ('../partials/footer') %>
+
     <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
     <script src="/public/js-fede/productsData.js"></script>
     <script src="/public/js-fede/shop.js"></script>
