--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -1,6 +1,8 @@
 <%- include('../partials/header') %>
 
     <!-- inicio de cuenta -->
+<body>
+    
 
     <div class="container">
         <label for="uname"><b>Nombre de Usuario</b></label>
@@ -15,13 +17,9 @@
 <!--footer-->
     <%- include('../partials/footer');
 
-
-
-
-
     <script src="../js/bootstrap.bundle.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqFjcJ6pajs/rfdfs3SO+kD4Ck5BdPtF+to8xMp9Mvc9E3I3WQ8wKUi3A0/GIi2vz9Z+GoiPkYs+gydKh3GpC/gZcI2Pf3Cj02qNW43wXxMf3oP81p3V7+8fvE+04vflMG22d6/lwZYhN42C9Xp28O17xOvT4A0XUt/Lk/g" crossorigin="anonymous"></script>
 <script src="../../js/register.js"></script>
 </body>
-</body>
+
 </html>
