--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -1,4 +1,7 @@
 <%- include('../partials/header') %>
+<body>
+    
+
     <!-- formulario -->
     <main class="main">
 
@@ -52,13 +55,15 @@
     
         </div>
     </main>
+
     <!-- footer -->
     <%- include ('../partials/footer') %>
+
         <!-- <script src="./js/bootstrap.bundle.min.js"></script> -->
         <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" -->
             <!-- integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqFjcJ6pajs/rfdfs3SO+kD4Ck5BdPtF+to8xMp9Mvc9E3I3WQ8wKUi3A0/GIi2vz9Z+GoiPkYs+gydKh3GpC/gZcI2Pf3Cj02qNW43wXxMf3oP81p3V7+8fvE+04vflMG22d6/lwZYhN42C9Xp28O17xOvT4A0XUt/Lk/g"
             crossorigin="anonymous"></script> -->
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="../../js/login.js"></script>
-        </body>
+    <script src="../../js/login.js"></script>
+  </body>
 </html>
