--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -11,8 +11,7 @@
       name="keywords"
       content="Tienda Funkoshop, articulos de las sagas Star Wars, Pockemon, Harry Potter. Funkos, Remeras, Llaveros"
     />
-    <title><%= title %> 
-        |Funkoshop</title>
+    <title><%= title %> |Funkoshop</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -23,41 +22,56 @@
     <link rel="stylesheet" href="/estilos/style.css" />
   </head>
   <body>
-<header>
-    <nav class="navbar container">
-      <div class="navbar__logo">
+    <header>
+      <nav class="navbar container">
+        <div class="navbar__logo">
           <a href="/" class="navbar__link-banner">
-              <img src="/img/multimedia/branding/logo_light_horizontal.svg" alt="logo_FUNKOSHOP" class="navbar__img">
+            <img
+              src="/img/multimedia/branding/logo_light_horizontal.svg"
+              alt="logo_FUNKOSHOP"
+              class="navbar__img"
+            />
           </a>
-      </div>
-  
-      <ul class="navbar__list">
+        </div>
+
+        <ul class="navbar__list">
           <li class="navbar__item navbar__item--with-submenu">
-              <a href="/public/pages/shop/shop.html" class="navbar__link navbar__link--icon">SHOP<i class="fa-solid fa-angle-right icon-animation " class="navbar__icon"></i></a>
-              <ul class="submenu">
-                  <li class="submenu__item">
-                      <a href="shop?filter=funkos" class="submenu__link">FUNKOS</a>
-                  </li>
-                  <li class="submenu__item">
-                      <a href="shop?filter=llaveros" class="submenu__link">LLAVEROS</a>
-                  </li>
-                  <li class="submenu__item">
-                      <a href="shop?filter=remeras" class="submenu__link">REMERAS</a>
-                  </li>
-              </ul>
+            <a
+              href="/public/pages/shop/shop.html"
+              class="navbar__link navbar__link--icon"
+              >SHOP<i
+                class="fa-solid fa-angle-right icon-animation"
+                class="navbar__icon"
+              ></i
+            ></a>
+            <ul class="submenu">
+              <li class="submenu__item">
+                <a href="shop?filter=funkos" class="submenu__link">FUNKOS</a>
+              </li>
+              <li class="submenu__item">
+                <a href="shop?filter=llaveros" class="submenu__link"
+                  >LLAVEROS</a
+                >
+              </li>
+              <li class="submenu__item">
+                <a href="shop?filter=remeras" class="submenu__link">REMERAS</a>
+              </li>
+            </ul>
           </li>
           <li class="navbar__item">
-              <a href="/contact" class="navbar__link">CONTACTO</a>
+            <a href="/contact" class="navbar__link">CONTACTO</a>
           </li>
           <li class="navbar__item">
-              <a href="/auth/login" class="navbar__link">LOGIN</a>
+            <a href="/auth/login" class="navbar__link">LOGIN</a>
           </li>
           <li class="navbar__item">
-              <a href="/shop/cart" class="navbar__link">
-                  <i class="fa-solid fa-cart-shopping"></i>
-                  <span class="navbar__item-cart">0</span>
-              </a>
+            <a href="/shop/cart" class="navbar__link">
+              <i class="fa-solid fa-cart-shopping"></i>
+              <span class="navbar__item-cart">0</span>
+            </a>
           </li>
-      </ul>
-  </nav>
-  </header>
+        </ul>
+      </nav>
+    </header>
+  </body>
+</html>
