cambios que rompieron el codigo

--- a/public/estilos/login.css
+++ b/public/estilos/login.css
@@ -39,7 +39,7 @@
 %%%%%%%%%%%%%%%%
 */
 
-img{
+ img{
     width: 100%;
 }
 
@@ -131,7 +131,7 @@ img{
     -webkit-box-shadow: 0px 0px 5px 3px rgba(148,148,148,0.58);
     -moz-box-shadow: 0px 0px 5px 3px rgba(148,148,148,0.58);
     box-shadow: 0px 0px 5px 3px rgba(148,148,148,0.58);
-}
+} */
 
 .main{
     height: 100vh;
