--- a/src/views/auth/login.ejs
+++ b/src/views/auth/login.ejs
@@ -1,25 +1,60 @@
-<%- include('../partials/header') %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Somos alumnos de Codo a Codo, del curso Node JS-JavaScript, comision 23568, con el profesor Sr Alberto Gabriel Feldman"
+    />
+    <meta
+      name="keywords"
+      content="Tienda Funkoshop, articulos de las sagas Star Wars, Pockemon, Harry Potter. Funkos, Remeras, Llaveros"
+    />
+    <title><%= title %> |Funkoshop</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="../estilos/login.css" />
+  </head>
+  <body>
+    <%- include ('../partials/header') %>
 
     <!-- inicio de cuenta -->
-<body>
-    
 
     <div class="container">
-        <label for="uname"><b>Nombre de Usuario</b></label>
-        <input type="text" placeholder="Ingrese su nombre de usuario" name="uname" required>
+      <label for="uname"><b>Nombre de Usuario</b></label>
+      <input
+        type="text"
+        placeholder="Ingrese su nombre de usuario"
+        name="uname"
+        required
+      />
 
-        <label for="psw"><b>Contraseña</b></label>
-        <input type="password" placeholder="Ingrese su contraseña" name="psw" required>
+      <label for="psw"><b>Contraseña</b></label>
+      <input
+        type="password"
+        placeholder="Ingrese su contraseña"
+        name="psw"
+        required
+      />
 
-        <button type="submit" class="btn">Registrarse</button>
+      <button type="submit" class="btn">Registrarse</button>
     </div>
 
-<!--footer-->
-    <%- include('../partials/footer');
+    <!--footer-->
+    <%- include ('../partials/footer') %>
 
     <script src="../js/bootstrap.bundle.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqFjcJ6pajs/rfdfs3SO+kD4Ck5BdPtF+to8xMp9Mvc9E3I3WQ8wKUi3A0/GIi2vz9Z+GoiPkYs+gydKh3GpC/gZcI2Pf3Cj02qNW43wXxMf3oP81p3V7+8fvE+04vflMG22d6/lwZYhN42C9Xp28O17xOvT4A0XUt/Lk/g" crossorigin="anonymous"></script>
-<script src="../../js/register.js"></script>
-</body>
-
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
+      integrity="sha384-pzjw8f+ua7Kw1TIq0v8FqFjcJ6pajs/rfdfs3SO+kD4Ck5BdPtF+to8xMp9Mvc9E3I3WQ8wKUi3A0/GIi2vz9Z+GoiPkYs+gydKh3GpC/gZcI2Pf3Cj02qNW43wXxMf3oP81p3V7+8fvE+04vflMG22d6/lwZYhN42C9Xp28O17xOvT4A0XUt/Lk/g"
+      crossorigin="anonymous"
+    ></script>
+    <script src="../../js/register.js"></script>
+  </body>
 </html>
