--- a/src/views/inicio.ejs
+++ b/src/views/inicio.ejs
@@ -1,4 +1,29 @@
-<%- include('./partials/header') %>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Somos alumnos de Codo a Codo, del curso Node JS-JavaScript, comision 23568, con el profesor Sr Alberto Gabriel Feldman"
+    />
+    <meta
+      name="keywords"
+      content="Tienda Funkoshop, articulos de las sagas Star Wars, Pockemon, Harry Potter. Funkos, Remeras, Llaveros"
+    />
+    <title><%= title %> |Funkoshop</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="./estilos/style.css" />
+  </head>
+
+  <body>
+    <%- include('./partials/header') %>
 
     <!-- seccion correspondiente al banner -->
     <section class="hero">
@@ -18,7 +43,9 @@
           <p class="collection__text">
             Disfruta de una saga que sigue agregando personajes a tu coleccion
           </p>
-          <a class="collection__link" href="../public/pages/shop/shop.html">VER COLECCION</a>
+          <a class="collection__link" href="../public/pages/shop/shop.html"
+            >VER COLECCION</a
+          >
         </article>
         <picture class="collection__cover">
           <img
@@ -41,7 +68,9 @@
             Atrapa a todos los que puedas y disfruta de una coleccion llena de
             amigos
           </p>
-          <a class="collection__link" href="../public/pages/shop/shop.html">VER COLECCION</a>
+          <a class="collection__link" href="../public/pages/shop/shop.html"
+            >VER COLECCION</a
+          >
         </article>
       </section>
       <section class="collection container">
@@ -50,7 +79,9 @@
           <p class="collection__text">
             Revive los recuerdos de una saga llena de magia y encanto
           </p>
-          <a class="collection__link" href="../public/pages/shop/shop.html">VER COLECCION</a>
+          <a class="collection__link" href="../public/pages/shop/shop.html"
+            >VER COLECCION</a
+          >
         </article>
         <picture class="collection__cover">
           <img
@@ -159,10 +190,13 @@
       </section>
     </main>
 
-   <%- include('./partials/footer') %>
+    <%- include('./partials/footer') %>
 
     <!-- Este script es para iconnify, donde bajaremos los chevrones del header -->
-    <script src="https://kit.fontawesome.com/d82e4588df.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/d82e4588df.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
     <!-- Este script es para la libreria glidejs, para el carussell -->
     <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
